<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="prefscreen_dead_man"
        android:persistent="false"
        android:summary="@string/prefscreen_dead_man_summary"
        android:title="@string/prefscreen_dead_man_title">

        <Preference
            android:key="@string/pref_dead_man_start"
            android:summary="@string/dead_man_start_summary"
            android:title="@string/dead_man_start" />

        <ListPreference
            android:defaultValue="3600"
            android:title="@string/dead_man_time_unit_title"
            android:entries="@array/time_unit"
            android:entryValues="@array/time_unit_values"
            android:key="@string/pref_dead_man_time_unit" />

        <EditTextPreference
            android:defaultValue="1"
            android:inputType="number"
            android:key="@string/pref_dead_man_time_amount"
            android:numeric="integer"
            android:title="@string/dead_man_time_amount" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_dead_man_unlock_cancel"
            android:summary="@string/dead_man_unlock_cancel_summary"
            android:title="@string/dead_man_unlock_cancel" />

    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/password_fails_summary"
        android:title="@string/password_fails">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_login_action"
            android:summary="@string/pref_login_actions_summary"
            android:title="@string/login_action" />

        <EditTextPreference
            android:defaultValue="2"
            android:dependency="@string/pref_login_action"
            android:inputType="number"
            android:key="@string/pref_login_failures_number"
            android:numeric="integer"
            android:summary="@string/pref_login_failures_number_summary"
            android:title="@string/login_failures_number" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/pref_login_action"
            android:key="@string/pref_disable_dialog_on_login"
            android:summary="@string/disable_dialog_on_login_summary"
            android:title="@string/disable_dialog_on_login" />

    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/notifications_summary"
        android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="@string/pref_notification_enabled"
            android:summary="@string/notification_enabled_summary"
            android:title="@string/notification_enabled" />

        <Preference
            android:defaultValue="false"
            android:dependency="@string/pref_notification_enabled"
            android:key="@string/pref_consider_widget"
            android:title="@string/consider_widget" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_runned_notification"
            android:summary="@string/runned_notification_summary"
            android:title="@string/runned_notification" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="prefscreen_confirmation_dialog"
        android:persistent="false"
        android:summary="@string/confirmation_dialog_summary"
        android:title="@string/confirmation_dialog">

        <PreferenceCategory android:title="@string/available_methods">

            <SwitchPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="@string/pref_dialog_none"
                android:summary="@string/dialog_none_summary"
                android:title="@string/none" />

            <SwitchPreference
                android:defaultValue="true"
                android:dependency="@string/pref_dialog_none"
                android:key="@string/pref_dialog_swipe"
                android:summary="@string/dialog_swipe_summary"
                android:title="@string/swipe" />

            <SwitchPreference
                android:defaultValue="false"
                android:dependency="@string/pref_dialog_none"
                android:key="@string/pref_countdown_enabled"
                android:summary="@string/pref_countdown_enabled_summary"
                android:title="@string/countdown" />

            <EditTextPreference
                android:defaultValue="5"
                android:dependency="@string/pref_countdown_enabled"
                android:inputType="number"
                android:key="@string/pref_countdown_seconds"
                android:numeric="integer"
                android:summary="@string/countdown_seconds_summary"
                android:title="@string/countdown_seconds" />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/debug">

            <Preference
                android:key="@string/pref_run_test"
                android:summary="@string/action_test_confirmation_summary"
                android:title="@string/action_test_confirmation" />

        </PreferenceCategory>

    </PreferenceScreen>

    <Preference
        android:key="@string/pref_app_listeners"
        android:summary="@string/responders_summary"
        android:title="@string/responders" />

    <PreferenceCategory android:title="@string/debug">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_dry_run_enabled"
            android:summary="@string/dry_run_enabled_summary"
            android:title="@string/dry_run_enabled" />

    </PreferenceCategory>
</PreferenceScreen>