<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_password_fails"
        android:summary="@string/password_fails_summary"
        android:title="@string/password_fails" />

    <Preference
        android:key="@string/pref_notifications"
        android:summary="@string/notifications_summary"
        android:title="@string/notifications" />

    <Preference
        android:key="@string/pref_confirmations"
        android:summary="@string/confirmation_dialog_summary"
        android:title="@string/confirmation_dialog" />

    <PreferenceCategory android:title="@string/debug">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_dry_run_enabled"
            android:summary="@string/dry_run_enabled_summary"
            android:title="@string/dry_run_enabled" />

    </PreferenceCategory>

</PreferenceScreen>