<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_login_action"
        android:summary="@string/pref_login_actions_summary"
        android:title="@string/login_action" />

    <EditTextPreference
        android:defaultValue="2"
        android:dependency="@string/pref_login_action"
        android:inputType="number"
        android:key="@string/pref_login_failures_number"
        android:numeric="integer"
        android:summary="@string/pref_login_failures_number_summary"
        android:title="@string/login_failures_number" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="@string/pref_login_action"
        android:key="@string/pref_disable_dialog_on_login"
        android:summary="@string/disable_dialog_on_login_summary"
        android:title="@string/disable_dialog_on_login" />
</PreferenceScreen>