<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/trigger"
            android:title="@string/app_name" />
        <item
            android:id="@+id/dead_man"
            android:title="@string/dead_man" />
        <item
            android:id="@+id/unlock"
            android:title="@string/password_fails" />
        <item
            android:id="@+id/confirmation"
            android:title="@string/confirmation_dialog" />
        <item
            android:id="@+id/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/receivers"
            android:title="@string/action_receivers" />
    </group>

    <item
        android:id="@+id/dry_run"
        android:title="@string/dry_run" />
</menu>
